[package]
name = "rstored"
version = "0.1.0"
authors = ["Artur Augustyniak <artur@aaugustyniak.pl>"]

[dependencies]
daemonize = "0.2.3"
log = "0.3"
rust-ini = "0.10.0"
syslog = "3.2.0"
libc = "0.2.0"
rustless = "0.10.0"
url = "1.4.0"
iron = "0.4.0"
valico = "1.0.1"
serde = "0.9.10"
serde_json = "0.9.8"
time = "0.1.36"
chan = "0.1.19"
chan-signal = "0.2.0"
getopts = "0.2.14"