[package]
name = "rstored"
version = "0.1.0"
authors = ["Artur Augustyniak <artur@aaugustyniak.pl>"]
[dependencies]
syslog = "3.2.0"
rust-ini = "0.10.0"
ansi_term = "0.9.0"
chan = "0.1.19"
chan-signal = "0.2.0"
unix-daemonize = "0.1"
getopts = "0.2.14"
libc = "0.2.0"
sys-info = "0.4.1"
libloading = "0.3.4"

#log = "0.3"
#rustless = "0.10.0"
#url = "1.4.0"
#iron = "0.4.0"
#valico = "1.0.1"
#serde = "0.9.10"
#serde_json = "0.9.8"
#time = "0.1.36"
